--- a/win32/p528.vcxproj
+++ b/win32/p528.vcxproj
@@ -38,9 +38,8 @@
     <ClCompile Include="..\src\LineOfSight.cpp" />
     <ClCompile Include="..\src\LongTermVariability.cpp" />
     <ClCompile Include="..\src\LOSTable.cpp" />
-    <ClCompile Include="..\src\P528Ex.cpp" />
+    <ClCompile Include="..\src\Main.cpp" />
     <ClCompile Include="..\src\NakagamiRice.cpp" />
-    <ClCompile Include="..\src\P528.cpp" />
     <ClCompile Include="..\src\RayOptics.cpp" />
     <ClCompile Include="..\src\RayTrace.cpp" />
     <ClCompile Include="..\src\ReflectionCoefficients.cpp" />
