renaming (old) raytrace to Thayer as I migrate to new P.676 method

--- a/win32/p528.vcxproj
+++ b/win32/p528.vcxproj
@@ -41,7 +41,7 @@
     <ClCompile Include="..\src\Main.cpp" />
     <ClCompile Include="..\src\NakagamiRice.cpp" />
     <ClCompile Include="..\src\RayOptics.cpp" />
-    <ClCompile Include="..\src\RayTrace.cpp" />
+    <ClCompile Include="..\src\Thayer.cpp" />
     <ClCompile Include="..\src\ReflectionCoefficients.cpp" />
     <ClCompile Include="..\src\SmoothEarthDiffraction.cpp" />
     <ClCompile Include="..\src\TerminalGeometry.cpp" />
