--- a/win32/p528.vcxproj
+++ b/win32/p528.vcxproj
@@ -20,39 +20,49 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\p528.h" />
+    <ClInclude Include="..\include\p676.h" />
+    <ClInclude Include="..\include\p835.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="p528.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\AbsorptionParameters.cpp" />
-    <ClCompile Include="..\src\CalculateEffectiveRayLength.cpp" />
-    <ClCompile Include="..\src\CombineDistributions.cpp" />
-    <ClCompile Include="..\src\data.cpp" />
-    <ClCompile Include="..\src\FindKForYpiAt99Percent.cpp" />
-    <ClCompile Include="..\src\GetPathLoss.cpp" />
-    <ClCompile Include="..\src\InverseComplementaryCumulativeDistributionFunction.cpp" />
-    <ClCompile Include="..\src\LinearInterpolation.cpp" />
-    <ClCompile Include="..\src\LineOfSight.cpp" />
-    <ClCompile Include="..\src\LongTermVariability.cpp" />
-    <ClCompile Include="..\src\P528.cpp" />
-    <ClCompile Include="..\src\MeanAnnualGlobalReferenceAtmosphere.cpp" />
-    <ClCompile Include="..\src\NakagamiRice.cpp" />
-    <ClCompile Include="..\src\OxygenData.cpp" />
-    <ClCompile Include="..\src\RayOptics.cpp" />
-    <ClCompile Include="..\src\RayTrace.cpp" />
-    <ClCompile Include="..\src\SpecificAttenuation.cpp" />
-    <ClCompile Include="..\src\ReflectionCoefficients.cpp" />
-    <ClCompile Include="..\src\SmoothEarthDiffraction.cpp" />
-    <ClCompile Include="..\src\TerminalGeometry.cpp" />
-    <ClCompile Include="..\src\TranshorizonSearch.cpp" />
-    <ClCompile Include="..\src\Troposcatter.cpp" />
-    <ClCompile Include="..\src\ValidateInputs.cpp" />
-    <ClCompile Include="..\src\WaterVapourData.cpp" />
+    <None Include="p528.def" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="p528.def" />
+    <ClCompile Include="..\src\p528\CombineDistributions.cpp" />
+    <ClCompile Include="..\src\p528\data.cpp" />
+    <ClCompile Include="..\src\p528\FindKForYpiAt99Percent.cpp" />
+    <ClCompile Include="..\src\p528\GetPathLoss.cpp" />
+    <ClCompile Include="..\src\p528\InverseComplementaryCumulativeDistributionFunction.cpp" />
+    <ClCompile Include="..\src\p528\LinearInterpolation.cpp" />
+    <ClCompile Include="..\src\p528\LineOfSight.cpp" />
+    <ClCompile Include="..\src\p528\LongTermVariability.cpp" />
+    <ClCompile Include="..\src\p528\NakagamiRice.cpp" />
+    <ClCompile Include="..\src\p528\P528.cpp" />
+    <ClCompile Include="..\src\p528\RayOptics.cpp" />
+    <ClCompile Include="..\src\p528\ReflectionCoefficients.cpp" />
+    <ClCompile Include="..\src\p528\SmoothEarthDiffraction.cpp" />
+    <ClCompile Include="..\src\p528\TerminalGeometry.cpp" />
+    <ClCompile Include="..\src\p528\TranshorizonSearch.cpp" />
+    <ClCompile Include="..\src\p528\Troposcatter.cpp" />
+    <ClCompile Include="..\src\p528\ValidateInputs.cpp" />
+    <ClCompile Include="..\src\p676\GaseousAttenuation.cpp" />
+    <ClCompile Include="..\src\p676\GlobalWetPressure.cpp" />
+    <ClCompile Include="..\src\p676\LineShapeFactor.cpp" />
+    <ClCompile Include="..\src\p676\NonresonantDebyeAttenuation.cpp" />
+    <ClCompile Include="..\src\p676\OxygenData.cpp" />
+    <ClCompile Include="..\src\p676\RayTrace.cpp" />
+    <ClCompile Include="..\src\p676\RefractiveIndex.cpp" />
+    <ClCompile Include="..\src\p676\Refractivity.cpp" />
+    <ClCompile Include="..\src\p676\SlantPath.cpp" />
+    <ClCompile Include="..\src\p676\SpecificAttenuation.cpp" />
+    <ClCompile Include="..\src\p676\TerrestrialPath.cpp" />
+    <ClCompile Include="..\src\p676\WaterVapourData.cpp" />
+    <ClCompile Include="..\src\p676\WaterVapourDensityToPartialPressure.cpp" />
+    <ClCompile Include="..\src\p835\Conversions.cpp" />
+    <ClCompile Include="..\src\p835\MeanAnnualGlobalReferenceAtmosphere.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1802289F-BF6D-4386-84F9-A850C27DB1AF}</ProjectGuid>
